ajout de la fonctionaliter d'attaque pour les joueur